--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "moment": "^2.21.0",
     "react": "^16.2.0",
-    "react-datepicker": "^0.61.0",
+    "react-datepicker": "^1.2.2",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
