--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "enzyme-to-json": "^3.3.3",
     "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-datepicker": "^1.2.2",
