--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "date-fns": "^1.29.0",
     "enzyme-to-json": "^3.3.3",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
