Add humps library to handle key format of json objects

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "date-fns": "^1.29.0",
     "enzyme-to-json": "^3.3.3",
+    "humps": "^2.0.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
