--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "date-fns": "^1.29.0",
     "enzyme-to-json": "^3.3.3",
     "humps": "^2.0.1",
+    "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
