--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "enzyme-to-json": "^3.3.3",
     "humps": "^2.0.1",
     "lodash": "^4.17.10",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.4.0",
+    "react-datepicker": "^1.5.0",
+    "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
