--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "money-management-web",
+  "name": "money-tracker-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
